add PatientControllerTest with mock service and security setup and add patient-related test cases